# minilog

./: .clang-format  .gitignore  CMakeLists.txt  StrBlob.cpp  StrBlob.h  StrBlobPtr.cpp  StrBlobPtr.h  cstyle_string.cpp  format.md  learning_pointer.cpp  main.cpp  minilog.h
ConcurrencyExample/: CMakeLists.txt  main.cpp
ExampleOpenCV/: CMakeLists.txt
ExampleOpenCV/GPU/: CMakeLists.txt
ExampleOpenCV/Sharpen/: CMakeLists.txt  main.cpp
FactoryExample/: CMakeLists.txt  factoryExample.cpp
Generics/: CMakeLists.txt  main.cpp
Generics/test/: CMakeLists.txt  test.cpp
IOExample/: CMakeLists.txt  boost_io_example.cpp  boost_tcp_example.cpp  chat_client.cpp  chat_message.h  chat_server.cpp  io_example.cpp  logging.cpp  tcp_example.cpp
chronoExample/: CMakeLists.txt  chrono_example.cpp
coreutilsExample/: CMakeLists.txt  hexdump.cpp
coroutinesExample/: CMakeLists.txt  coroutine_example.cpp
factoryExample/: CMakeLists.txt  HasPtrValue.cpp  Message.hpp  SalesData.cpp  Screen.cpp  StrVec.hpp  factoryExample.cpp  main.cpp  main_str.cpp
functionBind/: CMakeLists.txt  main.cpp
functionExample/: CMakeLists.txt  algorithmExample.cpp  algorithmExample.hpp  function.hpp  main.cpp
loggerExample/: CMakeLists.txt  logger.cpp
pointerExample/: CMakeLists.txt  main.cpp  sharedPointer.hpp
printfExample/: CMakeLists.txt  example.cpp  printfExample.cpp
rangesExample/: CMakeLists.txt  main.cpp
referenceExample/: CMakeLists.txt  referenceExample.cpp
roundRobinExample/: CMakeLists.txt  main.cpp  round_robin_example.cpp  round_robin_example.h
threadExample/: CMakeLists.txt  main.cpp  mutex_example.cpp  thread_example.cpp
vectorExample/: CMakeLists.txt  vector.hpp
